crates/plotnik-tests/tests/02-parser/recovery_unexpected/comma_between_defs.txt
A = (a), B = (b)
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:8
  |
1 | A = (a), B = (b)
  |        ^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
